<resources>
    <string name="app_name">MovieLand</string>

    <string name="titre_du_film">Titre du film : %s</string>
    <string name="annee_de_sortie">Année de sortie : %d</string>
    <string name="genre">Genre : %s</string>
    <string name="acteurs">Acteur: %s</string>
    <string name="resume">Résumé : %s</string>
    <string name="mon_compte">Mon Compte</string>
    <string name="ajout_film_bouton">Ajouter un film</string>
    <string name="deconnection">Déconnexion</string>
    <string name="modifier_mes_informations">Modifier mes informations</string>
    <string name="liste_films_ajoute">Ma liste de films</string>
    <string name="titre_du_film_ADD">Titre du film : </string>
    <string name="annee_de_sortie_ADD">Année de sortie :</string>
    <string name="genre_ADD">Genre du film: </string>
    <string name="acteurs_ADD">Acteur(s): </string>
    <string name="resume_ADD">Résumé : </string>
    <string name="inscription">Inscription</string>
    <string name="connection">Connexion</string>
    <string name="valider_password">Valider mot de passe</string>
    <string name="password">Mot de passe</string>
    <string name="email">Adresse mail</string>
    <string name="nomUtilisateur">Nom utilisateur</string>
    <string name="creerCompte">Creer un compte</string>
    <string name="enregistrer">S\'enregistrer</string>
    <string name="ajouter">Ajouter</string>
    <string name="takephoto">Prendre une photo</string>
    <string name="showimage">Mes images</string>
    <string name="modifier">Modifier</string>

    <!--affiche compte-->
    <string name="afficheCompte">Mon compte</string>
    <string name="modifierCompte">Changer mes informations</string>

    <!-- textes de validation -->
    <string name="emailerror">Entrer une adresse email valide</string>
    <string name="dateerror">Entrer une date valide</string>
    <string name="passworderror">Utiliser un mot de passe identique</string>


    <string name="ancienmdp">Ancien mot de passe</string>
    <string name="modifmdp">Entrez vote mot de passe</string>

    <string name="enregistremodif">Enregistrer les modifications</string>

    <string name="infos"><![CDATA[Visualiser la bande d\'annonce]]></string>

    <string name="notification">Revenez vite pour découvrir les nouveautés ou bien pour en partager ! :)</string>


</resources>
