<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:context=".ConnectionActivity">

    <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/connection"
        android:paddingLeft="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="22dp"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/PseudoC"
        android:hint="@string/nomUtilisateur"
        android:paddingLeft="10dp"
        android:paddingHorizontal="10dp"
        android:background="@color/colorGris"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorGrisClair"
        android:textSize="22dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/PasswordC"
        android:hint="@string/password"
        android:paddingLeft="10dp"
        android:background="@color/colorGris"
        android:textColorHint="@color/colorGrisClair"
        android:layout_marginTop="10dp"
        android:textSize="22dp"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/Connexion_connection"
        android:text="@string/connection"
        android:background="@color/colorRose"
        android:textSize="22dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/Inscription_connection"
        android:text="@string/inscription"
        android:background="@color/colorRose"
        android:textSize="22dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"/>


</LinearLayout>