<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorback"
    android:orientation="vertical"
    tools:context=".AfficheCompteActivity">

    <TextView

        android:layout_marginLeft="10dp"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:text="MovieLand"
        android:layout_marginTop="-100dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:paddingLeft="10dp"
        android:textColor="@color/colortitle"
        android:textSize="50dp"
        android:textStyle="italic|bold"/>

     <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:text="@string/afficheCompte"
         android:textAlignment="center"
         android:layout_marginTop="30dp"
        android:textColor="@color/colorBlack"
         android:textStyle="bold"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:text="@string/nomUtilisateur"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorGris"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:text="@string/email"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorGris"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/colorGris"
        android:textSize="22dp" />


</LinearLayout>