<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorback"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">


        <TextView

            android:layout_marginLeft="10dp"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:text="MovieLand"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:paddingLeft="10dp"
            android:textColor="@color/colortitle"
            android:textSize="50dp"
            android:textStyle="italic|bold"/>

        <!-- ZONE TITRE DU FILM -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/titre_du_film_ADD"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <EditText
            android:layout_marginTop="10dp"
            android:background="@color/colorGrisClair"
            android:paddingHorizontal="10dp"
            android:paddingLeft="10dp"
            android:textSize="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addFilm_titre"/>

        <!-- ZONE DE GENRE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:text="@string/genre_ADD"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText

            android:id="@+id/addFilm_genre"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:background="@color/colorGrisClair"
            android:paddingHorizontal="10dp"
            android:paddingLeft="10dp"
            android:textSize="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           />

        <!-- ZONE DE LANNEE DE SORTIE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:text="@string/annee_de_sortie_ADD"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText

            android:id="@+id/addFilm_annee"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:background="@color/colorGrisClair"
            android:paddingHorizontal="10dp"
            android:paddingLeft="10dp"
            android:textSize="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>




        <!-- ZONE ACTEURS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acteurs_ADD"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addFilm_addActeur"
                android:text="+"

                android:textColor="@color/colorGrisClair"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addFilm_addActeurLayout"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
        </LinearLayout>
        <!--ZONE DU RESUME -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume_ADD"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText

            android:minLines="8"
            android:id="@+id/addDVD_resume"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_marginTop="10dp"
            android:background="@color/colorGrisClair"
            android:paddingHorizontal="10dp"
            android:paddingLeft="10dp"
            android:textSize="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- ZONE DU BOUTON OK -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation ="vertical"
            android:gravity ="right">

            <Button
                android:id="@+id/addDVD_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ajouter"

                android:textStyle="bold"

                android:layout_marginTop="20dp"
                android:background="@color/colorbuttons"

                android:textColor="@color/colorBlack"
                android:textSize="18dp" />
        </LinearLayout>



    </LinearLayout>
</ScrollView>